[gd_scene load_steps=2 format=3 uid="uid://investigation_scene"]

[ext_resource type="Script" path="res://scripts/investigation/Investigation.gd" id="1_investigation_script"]

[node name="Investigation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_investigation_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="CaseTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Case Title"
horizontal_alignment = 1

[node name="CaseDescription" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Case description will appear here..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ActionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Available Actions:"
horizontal_alignment = 1

[node name="ActionsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="CluesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Discovered Clues:"
horizontal_alignment = 1

[node name="CluesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
